syntax = "proto3";

package meshmon;

service MeshMonService {
    // Bidirectional streaming for mesh updates
    rpc StreamUpdates(stream ProtocolData) returns (stream ProtocolData);
}

message ProtocolData {
    oneof message_type {
        PacketData packet_data = 1;
        ConnectionValidation connection_validation = 2;
    }
}

message PacketData {
    string packet_id = 1;
    string data = 2;
    string validator = 3;
}

message ConnectionValidation {
    string validator = 1;
}
